# Day-11-Guardrails-HITL-Responsible-AI-stardust-zip

./: .gitignore  assignment11_report.md  audit_log.json  pyproject.toml  shell.nix  student-guide.md  test_results.json
src/: audit_log.json  run_assignment_tests.py  test_results.json
src/agents/: agent.py
src/attacks/: attacks.py
src/core/: __init__.py  config.py  utils.py
src/guardrails/: __init__.py  audit_log.py  input_guardrails.py  monitoring.py  nemo_guardrails.py  output_guardrails.py  pipeline.py  rate_limiter.py
src/hitl/: hitl.py
src/testing/: testing.py
