[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "poject-name"
version = "0.1.0"
description = "Nothing yet"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
		"google-genai>=1.0.0",
		"google-adk>=0.3.0",
		"nemoguardrails>=0.10.0"
    # "pandas>=3.0.2",
    # "llama-index-core>=0.14.20",
    # "llama-index-readers-file>=0.6.0",
    # "llama-index-embeddings-openai>=0.6.0",
    # "llama-index-llms-openai>=0.7.5",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.pytest.ini_options]
# Pointing to the current directory instead of src
pythonpath = ["."]

[tool.basedpyright]
# Removed 'src' includes. It will scan the root directory by default.
exclude = ["__pycache__", ".direnv", ".mypy_cache", ".git", ".venv"]

[tool.setuptools.packages.find]
where = ["src"]
